# genanki-md

./: .gitignore  README.md  example.css  flake.nix  pyproject.toml  shell.nix
genanki-ai-example/: generate_anki_deck.py  main.py  parse_input.py
genanki-md/: builtin_models.py  core.py  errors.py  main.py  parsers.py
